--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,39 +1,104 @@
-<p style="font-weight: bold;">Tabla de clientes</p>
-<mat-table [dataSource]="clientes" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="nombre">
-        <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.nombre}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="apellido">
-        <mat-header-cell *matHeaderCellDef>Apellido</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.apellido}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="direccion">
-        <mat-header-cell *matHeaderCellDef>Dirección</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.direccion}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="ciudad">
-        <mat-header-cell *matHeaderCellDef>Ciudad</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.ciudad}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="telefono">
-        <mat-header-cell *matHeaderCellDef>Teléfono</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.telefono}}</mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
-<br>
-<div class="container">
-    <button mat-raised-button style="background-color: #D6003D;" routerLink="/">Volver</button>
+<!-- OBTENER PRODUCTOS -------------------------------------------------------------------------------------------------------------------------- -->
+<div *ngIf="opcion[0] == '1'">
+    <p style="font-weight: bold;">Tabla de clientes</p>
+    <mat-table [dataSource]="clientes" class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+            <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
+        </ng-container>
+    
+        <ng-container matColumnDef="nombre">
+            <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.nombre}}</mat-cell>
+        </ng-container>
+    
+        <ng-container matColumnDef="apellido">
+            <mat-header-cell *matHeaderCellDef>Apellido</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.apellido}}</mat-cell>
+        </ng-container>
+    
+        <ng-container matColumnDef="direccion">
+            <mat-header-cell *matHeaderCellDef>Dirección</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.direccion}}</mat-cell>
+        </ng-container>
+    
+        <ng-container matColumnDef="ciudad">
+            <mat-header-cell *matHeaderCellDef>Ciudad</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.ciudad}}</mat-cell>
+        </ng-container>
+    
+        <ng-container matColumnDef="telefono">
+            <mat-header-cell *matHeaderCellDef>Teléfono</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.telefono}}</mat-cell>
+        </ng-container>
+    
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+    <br>
+    <div class="container">
+        <button mat-raised-button style="background-color: #D6003D;" routerLink="/">Volver</button>
+    </div>
 </div>
+
+<div *ngIf="opcion[0] == '2'">
+    <p style="font-weight: bold;">Agregar un nuevo cliente</p>
+    <form class="example-form mat-elevation-z8">
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Nombre</mat-label>
+                        <input type="text" style="color: white;" matInput formControlName="nombre">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Apellido</mat-label>
+                        <input type="text" style="color: white;" matInput placeholder="$" formControlName="precio">
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Dirección</mat-label>
+                        <input type="text" style="color: white;" matInput placeholder="$" formControlName="costo">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Ciudad</mat-label>
+                        <input type="text" style="color: white;" matInput maxlength="5" placeholder="12"
+                            formControlName="cantidad">
+                        <!-- <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint> -->
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Teléfono</mat-label>
+                        <input type="tel" style="color: white;" matInput placeholder="$" formControlName="costo">
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
+        <button mat-raised-button style="background-color: #27AE60; width: 99%;" routerLink="/">Agregar</button>
+    </form>
+    <div class="container">
+        <button mat-raised-button style="background-color: #D6003D;" routerLink="/">Volver</button>
+    </div>
+</div>
+
+<!-- <div *ngIf="opcion[0] == '3'">
+
+</div>
+
+<div *ngIf="opcion[0] == '4'">
+
+</div> -->
