--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,34 +1,12 @@
 <!-- <p>Bienvenido!! {{username}}</p> -->
 <p>Bienvenido!!</p>
-<!-- <mat-card>
-    <mat-card-title>Productos</mat-card-title>
-    <mat-card-subtitle>Ingresar a productos</mat-card-subtitle>
-    <mat-card-actions align="end">
-        <button mat-button routerLink="/productos" [queryParams]="{op: '1'}">Obtener</button>
-        <button mat-button style="color: #7cb342;" routerLink="/productos" [queryParams]="{op: '2'}">Agregar</button>
-        <button mat-button style="color: #ffc107;" routerLink="/productos" [queryParams]="{op: '3'}">Actualizar</button>
-        <button mat-button color="warn" routerLink="/productos" [queryParams]="{op: '4'}">Eliminar</button>
-    </mat-card-actions>
-</mat-card>
-<br>
-<mat-card>
-    <mat-card-title>Clientes</mat-card-title>
-    <mat-card-subtitle>Ingresar a clientes</mat-card-subtitle>
-    <mat-card-actions align="end">
-        <button mat-button routerLink="/clientes">Obtener</button>
-        <button mat-button style="color: #7cb342;" routerLink="">Agregar</button>
-        <button mat-button style="color: #ffc107;" routerLink="">Actualizar</button>
-        <button mat-button color="warn" routerLink="">Eliminar</button>
-    </mat-card-actions>
-</mat-card>
-<br> -->
 <mat-card>
     <mat-card-title>Usuarios</mat-card-title>
     <mat-card-subtitle>Ingresar a usuarios</mat-card-subtitle>
     <mat-card-actions align="end">
-        <button mat-button routerLink="/usuarios">Obtener</button>
-        <button mat-button style="color: #7cb342;" routerLink="">Agregar</button>
-        <button mat-button style="color: #ffc107;" routerLink="">Actualizar</button>
+        <button mat-button routerLink="/usuarios" [queryParams]="{op: '1'}">Obtener</button>
+        <button mat-button style="color: #7cb342;" routerLink="/usuarios" [queryParams]="{op: '2'}">Agregar</button>
+        <button mat-button style="color: #ffc107;" routerLink="" [queryParams]="{op: '3'}">Actualizar</button>
         <button mat-button color="warn" routerLink="">Eliminar</button>
     </mat-card-actions>
 </mat-card>
