--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -1,42 +1,43 @@
-<p style="font-weight: bold;">Tabla de clientes</p>
-<mat-table [dataSource]="usuarios" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
-    </ng-container>
+<div *ngIf="opcion[0] == '1'">
+    <p style="font-weight: bold;">Tabla de clientes</p>
+    <mat-table [dataSource]="usuarios" class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+            <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.id}}</mat-cell>
+        </ng-container>
 
-    <!-- <ng-container matColumnDef="username">
-        <mat-header-cell *matHeaderCellDef>Nombre de Usuario</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.username}}</mat-cell>
-    </ng-container> -->
+        <ng-container matColumnDef="username">
+            <mat-header-cell *matHeaderCellDef>Nombre de Usuario</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.username}}</mat-cell>
+        </ng-container>
 
-    <ng-container matColumnDef="first_name">
-        <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.first_name}}</mat-cell>
-    </ng-container>
+        <ng-container matColumnDef="first_name">
+            <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.first_name}}</mat-cell>
+        </ng-container>
 
-    <ng-container matColumnDef="last_name">
-        <mat-header-cell *matHeaderCellDef>Apellido</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.last_name}}</mat-cell>
-    </ng-container>
+        <ng-container matColumnDef="last_name">
+            <mat-header-cell *matHeaderCellDef>Apellido</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.last_name}}</mat-cell>
+        </ng-container>
 
-    <ng-container matColumnDef="email">
-        <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.email}}</mat-cell>
-    </ng-container>
+        <ng-container matColumnDef="email">
+            <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.email}}</mat-cell>
+        </ng-container>
 
-    <!-- <ng-container matColumnDef="password">
+        <!-- <ng-container matColumnDef="password">
         <mat-header-cell *matHeaderCellDef>Contraseña</mat-header-cell>
         <mat-cell *matCellDef="let row">{{row.password}}</mat-cell>
         <mat-cell *matCellDef="let row">*************</mat-cell>
     </ng-container> -->
 
-    <ng-container matColumnDef="groups">
-        <mat-header-cell *matHeaderCellDef>Rol</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.groups}}</mat-cell>
-    </ng-container>
+        <ng-container matColumnDef="groups">
+            <mat-header-cell *matHeaderCellDef>Rol</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.groups}}</mat-cell>
+        </ng-container>
 
-    <!-- <ng-container matColumnDef="user_permissions">
+        <!-- <ng-container matColumnDef="user_permissions">
         <mat-header-cell *matHeaderCellDef>Permisos del usuario</mat-header-cell>
         <mat-cell *matCellDef="let row">{{row.user_permissions}}--</mat-cell>
     </ng-container>
@@ -61,15 +62,70 @@
         <mat-cell *matCellDef="let row">{{row.last_login}}</mat-cell>
     </ng-container> -->
 
-    <ng-container matColumnDef="date_joined">
-        <mat-header-cell *matHeaderCellDef>Fecha registro</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.date_joined}}</mat-cell>
-    </ng-container>
+        <ng-container matColumnDef="date_joined">
+            <mat-header-cell *matHeaderCellDef>Fecha registro</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{row.date_joined}}</mat-cell>
+        </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
-<br>
-<div class="container">
-    <button mat-raised-button style="background-color: #D6003D;" routerLink="/">Volver</button>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+    <br>
+    <div class="container">
+        <button mat-raised-button style="background-color: #D6003D;" routerLink="/">Volver</button>
+    </div>
+</div>
+
+<div *ngIf="opcion[0] == '2'">
+    <p style="font-weight: bold;">Agregar un nuevo cliente</p>
+    <form class="example-form mat-elevation-z8">
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Nombre</mat-label>
+                        <input type="text" style="color: white;" matInput formControlName="nombre">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Apellido</mat-label>
+                        <input type="text" style="color: white;" matInput placeholder="$" formControlName="precio">
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Dirección</mat-label>
+                        <input type="text" style="color: white;" matInput placeholder="$" formControlName="costo">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Ciudad</mat-label>
+                        <input type="text" style="color: white;" matInput maxlength="5" placeholder="12"
+                            formControlName="cantidad">
+                        <!-- <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint> -->
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
+        <table class="example-full-width" cellspacing="0">
+            <tr>
+                <td>
+                    <mat-form-field class="example-full-width" appearance="fill" color="accent">
+                        <mat-label>Teléfono</mat-label>
+                        <input type="tel" style="color: white;" matInput placeholder="$" formControlName="costo">
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
+        <button mat-raised-button style="background-color: #27AE60; width: 99%;" routerLink="/">Agregar</button>
+    </form>
+    <div class="container">
+        <button mat-raised-button style="background-color: #D6003D;" routerLink="/">Volver</button>
+    </div>
 </div>
